[package]
name = "structopt-examples"
description = "Examples of parsing command line arguments using StructOpt crate"
version = "0.1.0"
authors = ["Leo Tytakoff"]
edition = "2018"

[[bin]]
name = "00-simple-two-args"
path = "src/00-simple-two-args.rs"

[[bin]]
name = "01-default-conditional"
path = "src/01-default-conditional.rs"

[[bin]]
name = "02-subcommands"
path = "src/02-subcommands.rs"

[[bin]]
name = "03-enum-formatting"
path = "src/03-enum-formatting.rs"

[[bin]]
name = "04-input-output-files"
path = "src/04-input-output-files.rs"

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
