[package]
name = "structopt-examples"
description = "Examples of parsing command line arguments using StructOpt crate"
version = "0.1.0"
authors = ["Leo Tytakoff"]
edition = "2018"

[[bin]]
name = "00-simple-two-args"
path = "src/00-simple-two-args.rs"

[[bin]]
name = "01-info-arg-names"
path = "src/01-info-arg-names.rs"

[[bin]]
name = "02-default-optional-conditional"
path = "src/02-default-optional-conditional.rs"

[[bin]]
name = "03-subcommands"
path = "src/03-subcommands.rs"

[[bin]]
name = "04-enum-formatting"
path = "src/04-enum-formatting.rs"

[dependencies]
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
